# mines

./: .clang-format  .gitignore  1.ok  2.ok  3.ok  4.ok  5.ok  6.ok  7.ok  8.ok  CMakeLists.txt  Makefile  accio.cpp  all.ok  butt_test.cpp  butterfly.cpp  butterfly.h  detect.cpp  deter_bench.cpp  felix.cpp  john.cpp  mineutils.cpp  mineutils.h  mnu_test.cpp  roundup.cpp  sched_demo.cpp  solvers.h  union.cpp  watcher.cpp
